[package]
name = "http-signature-rs"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0-pre.1"
http = "0.1.18"
sha2 = "0.8.0"
data-encoding = "2.1.2"

[dev-dependencies]
rand = "0.6"
